--- a/node-using-json-file/package.json
+++ b/node-using-json-file/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "md5": "^2.3.0",
     "node-localstorage": "^3.0.5"
