--- a/node-csv-file-task/package.json
+++ b/node-csv-file-task/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "express": "^5.2.1",
     "fast-csv": "^5.0.5",
     "fs": "^0.0.1-security",
